--- a/offer.html
+++ b/offer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS Get to Promo</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         .CSGettoPromoW {
@@ -399,7 +399,7 @@
                 </div>
                 <div class="pageHead-tblCLogo">
                     <a class="pageHead-logo" href="/link">
-                        <img src="/img/logo.png" alt="">
+                        <img src="img/logo.png" alt="">
                     </a>
                 </div>
                 <div class="pageHead-tblCContent">
@@ -599,8 +599,8 @@
                             <div class="pageSB-srvList">
                                 <a class="pageSB-srvI pageSB-srvI-BoostType3" href="/link46.174.50.109:27015"
                                     data-gameid="2" data-tooltipserver="442187">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/dust.jpg"
-                                        style="background-image: url(&quot;/img/map/dust.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/dust.jpg"
+                                        style="background-image: url(&quot;img/map/dust.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -623,8 +623,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-Highlight1 pageSB-srvI-BoostType3"
                                     href="/link62.122.215.123:27015" data-gameid="2" data-tooltipserver="235734">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/awp_rp06.jpg"
-                                        style="background-image: url(&quot;/img/map/awp_rp06.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/awp_rp06.jpg"
+                                        style="background-image: url(&quot;img/map/awp_rp06.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -648,8 +648,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-Highlight1 pageSB-srvI-BoostType2"
                                     href="/link146.185.198.39:42357" data-gameid="2" data-tooltipserver="441744">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/csgo_icon.jpg"
-                                        style="background-image: url(&quot;/img/map/csgo_icon.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/csgo_icon.jpg"
+                                        style="background-image: url(&quot;img/map/csgo_icon.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -672,8 +672,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-Highlight1 pageSB-srvI-BoostType2"
                                     href="/link146.185.198.39:42416" data-gameid="2" data-tooltipserver="441715">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/csgo_icon.jpg"
-                                        style="background-image: url(&quot;/img/map/csgo_icon.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/csgo_icon.jpg"
+                                        style="background-image: url(&quot;img/map/csgo_icon.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -696,8 +696,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-Highlight1 pageSB-srvI-BoostType2"
                                     href="/link109.248.250.241:27022" data-gameid="2" data-tooltipserver="337515">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/mirage.jpg"
-                                        style="background-image: url(&quot;/img/map/mirage.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/mirage.jpg"
+                                        style="background-image: url(&quot;img/map/mirage.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -720,8 +720,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-Highlight5 pageSB-srvI-BoostType2"
                                     href="/link51.77.56.3:27019" data-gameid="2" data-tooltipserver="326483">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/csgo_icon.jpg"
-                                        style="background-image: url(&quot;/img/map/csgo_icon.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/csgo_icon.jpg"
+                                        style="background-image: url(&quot;img/map/csgo_icon.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -744,8 +744,8 @@
                                 </a>
                                 <a class="pageSB-srvI pageSB-srvI-BoostType2" href="/link178.19.104.125:24124"
                                     data-gameid="2" data-tooltipserver="389484">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/mirage.jpg"
-                                        style="background-image: url(&quot;/img/map/mirage.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/mirage.jpg"
+                                        style="background-image: url(&quot;img/map/mirage.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -785,8 +785,8 @@
                                 <a class="pageSB-srvI pageSB-srvI-Highlight5 pageSB-srvI-BoostType3"
                                     href="/linkru/servers/counter-strike-1.6/95.165.170.176:27015" data-gameid="1"
                                     data-tooltipserver="442147">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/RU.jpg"
-                                        style="background-image: url(&quot;/img/map/RU.jpg&quot;);"></div>
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/RU.jpg"
+                                        style="background-image: url(&quot;img/map/RU.jpg&quot;);"></div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
                                             <div class="pageSB-srvIPlayers">
@@ -809,8 +809,8 @@
                                 <a class="pageSB-srvI pageSB-srvI-BoostType3"
                                     href="/linkru/servers/counter-strike-1.6/91.211.118.86:27025" data-gameid="1"
                                     data-tooltipserver="442190">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/dust.jpg"
-                                        style="background-image: url(&quot;/img/map/dust.jpg&quot;);">
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/dust.jpg"
+                                        style="background-image: url(&quot;img/map/dust.jpg&quot;);">
                                     </div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
@@ -884,8 +884,8 @@
                                 <a class="pageSB-srvI pageSB-srvI-Highlight1 pageSB-srvI-BoostType3"
                                     href="/linkru/servers/counter-strike-1.6/193.164.17.188:27019" data-gameid="1"
                                     data-tooltipserver="441526">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/RU.jpg"
-                                        style="background-image: url(&quot;/img/map/RU.jpg&quot;);"></div>
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/RU.jpg"
+                                        style="background-image: url(&quot;img/map/RU.jpg&quot;);"></div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
                                             <div class="pageSB-srvIPlayers">
@@ -1099,8 +1099,8 @@
                                 <a class="pageSB-srvI pageSB-srvI-Highlight4 pageSB-srvI-BoostType3"
                                     href="/linkru/servers/counter-strike-source/46.174.48.80:27015" data-gameid="3"
                                     data-tooltipserver="403949">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/RU.jpg"
-                                        style="background-image: url(&quot;/img/map/RU.jpg&quot;);"></div>
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/RU.jpg"
+                                        style="background-image: url(&quot;img/map/RU.jpg&quot;);"></div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
                                             <div class="pageSB-srvIPlayers">
@@ -1123,8 +1123,8 @@
                                 <a class="pageSB-srvI pageSB-srvI-Highlight2 pageSB-srvI-BoostType3"
                                     href="/linkru/servers/counter-strike-source/46.174.49.149:9999" data-gameid="3"
                                     data-tooltipserver="137127">
-                                    <div class="pageSB-srvIC1" data-deferimage="/img/map/RU.jpg"
-                                        style="background-image: url(&quot;/img/map/RU.jpg&quot;);"></div>
+                                    <div class="pageSB-srvIC1" data-deferimage="img/map/RU.jpg"
+                                        style="background-image: url(&quot;img/map/RU.jpg&quot;);"></div>
                                     <div class="pageSB-srvIC2">
                                         <div class="pageSB-srvIRow">
                                             <div class="pageSB-srvIPlayers">
@@ -1398,7 +1398,7 @@
                             </nav>
                         </div><!-- -->
                         <div class="pageFoot-tblC4"> <a class="pageFoot-logo" href="/link"> <span
-                                    class="pageFoot-logoTitle"> <img src="/img/logo.png" alt=""> <span
+                                    class="pageFoot-logoTitle"> <img src="img/logo.png" alt=""> <span
                                         class="pageFoot-logoTitleText"><span>CSGettoPromo </span>
                                         <span class="pageFoot-logoSub"> Monitoring | 2014 – 2024 </span> </a>
                         </div>
@@ -1424,7 +1424,7 @@
             <button type="submit">Отправить</button>
         </div>
     </form>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 
